# justinethier-misc

./: Sipc.chs  sipc.hsc  splits-happen.c
apply/apply-hack/: Readme.md
bench/array1/: Makefile  array1.c  array1.scm
blog/kaprekars-constant-6174/: Readme.md  code.js
c-linked-list/: Makefile  a.out  linked-list.c  linked-list.h  ll.c  test-linked-list.c
cloudburst/: Makefile  Makefile.config  Readme.md  my-app.scm  notes.txt
cloudburst/lib/: fcgi.sld  http.sld  json.sld  response.sld
cloudburst/tests/: curl.sh  json-test.scm
conservative-gc/: Readme.md  main.c
cps-conversion/: Readme  scheme-cps-convert.rkt
curl/: Makefile  curl.scm  repl.scm  test.scm
curl/cyclone/: curl.sld
dash/: dash-test.py
data/gc-latency/: Readme.md  earley.txt.bz2  nboyer.txt.bz2
easel/: demo.html
fastcgi/: Makefile  Makefile.config  Readme.md  cirrus.scm  example.c  fcgi.scm  http.sld  json.scm  main.scm  nginx.conf  notes.txt  stormfury.scm  test.scm
haskell/: install_cabal.sh  install_haskell.sh
http/: Makefile  config.h  handle-request.h  http-server.sld  main.scm  main3.scm  start-server.h  start-server.scm  test.c
js-multiplication-table/: index.html
loop-dev/: Makefile  diviter.c  diviter.scm  fibc-master.c  fibc.scm  string.c  string.scm  test-local-var-locs.c
matrix/: Makefile  matrix.c  matrix.scm
mbrot/: Makefile  mbrot.c  mbrot.scm
merge-sort/: merge.c  merge.py  test.py
misc/: 48-bit-unpack.c  count-by-hour.py  count-by-minute.py  strrev.c
puzzle/: Makefile  puzzle.c  puzzle.scm
python/: count-by-second.py
r7rs-small-spec/: Makefile  procs.html
read1/: read1.scm  run.sh
scheme/: sc.scm
scrape/: db-create.go  main.go  parse.go  sample.json  scrape.go
simpletex/: .default.css.swp  .index.html.swp  about.html  default.css  documentation.html  get-husk.html  index.html
sipc/: Makefile  Sipc.chs  bindings-sipc.cabal  sipc.cabal  sipc.hsc
sipc/old/: ffi-sipc.hs  ffi-testing.hs
sipc/src/Bindings/SELinux/: SIPC.chs
stack-exchange-api/: Makefile  curl.c  http.c  parser.c  se-api.c  se-api.h  stack-exchange-poll.c
template/: Readme.md  example.scm  parser.sld  read.scm  read2.scm  spec.md  template.sld  test.scm  trace.sld  view-1.html  view-3.html  view-4.html
zig/: mark-sweep.zig
(+281 files in other folders)
